# Student_RAG

./: .dockerignore  .gitignore  Dockerfile  FILE_INDEX.txt  README.md  START.bat  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  run.py
.github/workflows/: ci.yml
configs/development/: config.yaml
data/: concept_graph.json
docs/: HANDOFF.md  architecture.md  engineering_decisions.md  progress_summary.md
scripts/: check_bad_json.py  check_bad_tags.py  create_dirs.ps1  fix_bad_json_and_clean.py  fix_json_options.py  seed_data.py  seed_full.py  seed_jee_archive.py  stress_test.py  test_api.py  test_api_endpoints.py  test_faiss.py  verify_json.py
studob/: exceptions.py  logging_setup.py
studob/analytics/: __init__.py  mastery_trends.py  mistake_patterns.py  service.py  session_reports.py
studob/api/: __init__.py  app.py  dependencies.py  middleware.py
studob/assessment/: __init__.py  engine.py  evaluator.py  tagger.py
studob/auth/: service.py
studob/confidence/: __init__.py  analytics.py  calculator.py  constants.py  models.py  service.py
studob/config/: loader.py
studob/content_engine/: __init__.py  adaptive_renderer.py  content_templates.py  explanation_repository.py  formula_repository.py  hint_repository.py  misconception_repository.py  practice_selector.py  solution_repository.py
studob/database/: engine.py  models.py
studob/diagnosis/: __init__.py  classifier.py  concept_tagger.py  engine.py  error_types.py
studob/embeddings/: __init__.py  generator.py  service.py  storage.py
studob/graph/: __init__.py  schema.py  service.py  store.py
studob/question_bank/: __init__.py  app_questions.py  metadata.py  test_questions.py
studob/retrieval/: __init__.py  concept_expansion.py  context_builder.py  metadata_filter.py  mistake_matcher.py  orchestrator.py  reranker.py  semantic.py  student_filter.py
studob/schemas/: __init__.py  analytics.py  assessment.py  diagnosis.py  practice.py  question.py  retrieval.py  session.py  student.py
studob/student/: __init__.py  mastery.py  profile.py  session_memory.py
suraj_dada/: exceptions.py  logging_setup.py
suraj_dada/analytics/: __init__.py  mastery_trends.py  mistake_patterns.py  service.py  session_reports.py
suraj_dada/api/: __init__.py  app.py  dependencies.py  middleware.py
suraj_dada/assessment/: __init__.py  engine.py  evaluator.py  tagger.py
suraj_dada/config/: loader.py
suraj_dada/database/: engine.py  models.py
suraj_dada/diagnosis/: __init__.py  classifier.py  concept_tagger.py  engine.py  error_types.py
tests/: conftest.py
(+79 files in other folders)
