[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["studob", "studob.*"]

[project]
name = "studob"
version = "0.2.0"
description = "AI-powered adaptive tutoring platform for JEE students"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Studob Team"},
]
keywords = ["jee", "education", "adaptive-learning", "tutoring"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Education :: Computer Aided Instruction (CAI)",
]

[project.urls]
Homepage = "https://github.com/RanadeChaitanya/Student_RAG"
Repository = "https://github.com/RanadeChaitanya/Student_RAG.git"
Documentation = "https://github.com/RanadeChaitanya/Student_RAG"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.9.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
